--- a/Ronchi_dei_Legionari.mw
+++ b/Ronchi_dei_Legionari.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ronchi dei Legionari''' éte 'nu comune [[Italie|tagliáne]] de 11.734 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
