--- a/San_Lorenzo_Isontino.mw
+++ b/San_Lorenzo_Isontino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Lorenzo Isontino''' éte 'nu comune [[Italie|tagliáne]] de 1.412 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
