--- a/San_Pier_d'Isonzo.mw
+++ b/San_Pier_d'Isonzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Pier d'Isonzo''' éte 'nu comune [[Italie|tagliáne]] de 1.892 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
