--- a/Savogna_d'Isonzo.mw
+++ b/Savogna_d'Isonzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Savogna d'Isonzo''' éte 'nu comune [[Italie|tagliáne]] de 1.755 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
