--- a/Staranzano.mw
+++ b/Staranzano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Staranzano''' éte 'nu comune [[Italie|tagliáne]] de 6.812 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
