--- a/Brugnera.mw
+++ b/Brugnera.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Brugnera''' éte 'nu comune [[Italie|tagliáne]] de 8.714 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
