--- a/Castelnovo_del_Friuli.mw
+++ b/Castelnovo_del_Friuli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castelnovo del Friuli''' éte 'nu comune [[Italie|tagliáne]] de 895 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
