--- a/Cavasso_Nuovo.mw
+++ b/Cavasso_Nuovo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavasso Nuovo''' éte 'nu comune [[Italie|tagliáne]] de 1.396 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
