--- a/Cimolais.mw
+++ b/Cimolais.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cimolais''' éte 'nu comune [[Italie|tagliáne]] de 450 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
