--- a/Claut.mw
+++ b/Claut.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Claut''' éte 'nu comune [[Italie|tagliáne]] de 1.116 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
