--- a/Clauzetto.mw
+++ b/Clauzetto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Clauzetto''' éte 'nu comune [[Italie|tagliáne]] de 419 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
