--- a/Erto_e_Casso.mw
+++ b/Erto_e_Casso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Erto e Casso''' éte 'nu comune [[Italie|tagliáne]] de 424 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
