--- a/Fanna.mw
+++ b/Fanna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fanna''' éte 'nu comune [[Italie|tagliáne]] de 1.577 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
