--- a/Fontanafredda.mw
+++ b/Fontanafredda.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fontanafredda''' éte 'nu comune [[Italie|tagliáne]] de 10.335 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
