--- a/Frisanco.mw
+++ b/Frisanco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Frisanco''' éte 'nu comune [[Italie|tagliáne]] de 643 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
