--- a/Maniago.mw
+++ b/Maniago.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Maniago''' éte 'nu comune [[Italie|tagliáne]] de 11.471 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
 
 [[ca:Maniago]]
 [[de:Maniago]]
