--- a/Martignana_di_Po.mw
+++ b/Martignana_di_Po.mw
@@ -1,3 +1,16 @@
 {{S}}
 '''Martignana di Po''' éte 'nu comune [[Italie|tagliáne]] de 1.254 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Martignana di Po]]
+[[eo:Martignana di Po]]
+[[fr:Martignana di Po]]
+[[it:Martignana di Po]]
+[[ja:マルティニャーナ・ディ・ポー]]
+[[nap:Martignana di Po]]
+[[nl:Martignana di Po]]
+[[pl:Martignana di Po]]
+[[pt:Martignana di Po]]
+[[uk:Мартіньяна-ді-По]]
+[[vi:Martignana di Po]]
+[[vo:Martignana di Po]]
