--- a/Montereale_Valcellina.mw
+++ b/Montereale_Valcellina.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montereale Valcellina''' éte 'nu comune [[Italie|tagliáne]] de 4.638 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
