--- a/Morsano_al_Tagliamento.mw
+++ b/Morsano_al_Tagliamento.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Morsano al Tagliamento''' éte 'nu comune [[Italie|tagliáne]] de 2.764 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
