--- a/Pasiano_di_Pordenone.mw
+++ b/Pasiano_di_Pordenone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pasiano di Pordenone''' éte 'nu comune [[Italie|tagliáne]] de 7.349 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
