--- a/Polcenigo.mw
+++ b/Polcenigo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Polcenigo''' éte 'nu comune [[Italie|tagliáne]] de 3.162 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
