--- a/Prata_di_Pordenone.mw
+++ b/Prata_di_Pordenone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Prata di Pordenone''' éte 'nu comune [[Italie|tagliáne]] de 7.900 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
