--- a/Pravisdomini.mw
+++ b/Pravisdomini.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pravisdomini''' éte 'nu comune [[Italie|tagliáne]] de 3.090 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
