--- a/Sacile.mw
+++ b/Sacile.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sacile''' éte 'nu comune [[Italie|tagliáne]] de 19.636 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
