--- a/San_Quirino.mw
+++ b/San_Quirino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Quirino''' éte 'nu comune [[Italie|tagliáne]] de 3.814 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
