--- a/Sequals.mw
+++ b/Sequals.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sequals''' éte 'nu comune [[Italie|tagliáne]] de 2.146 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
