--- a/Spilimbergo.mw
+++ b/Spilimbergo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Spilimbergo''' éte 'nu comune [[Italie|tagliáne]] de 11.635 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
