--- a/San_Giorgio_della_Richinvelda.mw
+++ b/San_Giorgio_della_Richinvelda.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Giorgio della Richinvelda''' éte 'nu comune [[Italie|tagliáne]] de 4.316 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
