--- a/Tramonti_di_Sopra.mw
+++ b/Tramonti_di_Sopra.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tramonti di Sopra''' éte 'nu comune [[Italie|tagliáne]] de 418 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
