--- a/Tramonti_di_Sotto.mw
+++ b/Tramonti_di_Sotto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tramonti di Sotto''' éte 'nu comune [[Italie|tagliáne]] de 438 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
