--- a/Travesio.mw
+++ b/Travesio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Travesio''' éte 'nu comune [[Italie|tagliáne]] de 1.758 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
