--- a/Udine.mw
+++ b/Udine.mw
@@ -35,6 +35,8 @@
 '''Udine''' éte 'nu comune [[Italie|tagliáne]] de 96.750 crestiáne.
 
 [[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Udine]]
+{{Provinge de Udine}}
 
 [[ar:أوديني]]
 [[bar:Udine]]
