--- a/Mazzano_Romano.mw
+++ b/Mazzano_Romano.mw
@@ -4,3 +4,18 @@
 [[Category:Comune d'u Lazie]]
 [[Category:Comune d'a provinge de Rome]]
 {{Provinge de Rome}}
+
+[[de:Mazzano Romano]]
+[[en:Mazzano Romano]]
+[[eo:Mazzano Romano]]
+[[fr:Mazzano Romano]]
+[[it:Mazzano Romano]]
+[[ja:マッツァーノ・ロマーノ]]
+[[nap:Mazzano Romano]]
+[[nl:Mazzano Romano]]
+[[pl:Mazzano Romano]]
+[[pt:Mazzano Romano]]
+[[ru:Маццано-Романо]]
+[[uk:Маццано-Романо]]
+[[vi:Mazzano Romano]]
+[[vo:Mazzano Romano]]
