--- a/Mediglia.mw
+++ b/Mediglia.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Mediglia''' éte 'nu comune [[Italie|tagliáne]] de 11.425 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Mediglia]]
+[[en:Mediglia]]
+[[eo:Mediglia]]
+[[fr:Mediglia]]
+[[it:Mediglia]]
+[[ja:メディリア]]
+[[nap:Mediglia]]
+[[nl:Mediglia]]
+[[pl:Mediglia]]
+[[pt:Mediglia]]
+[[ru:Медилья]]
+[[uk:Меділья]]
+[[vi:Mediglia]]
+[[vo:Mediglia]]
