--- a/Megliadino_San_Vitale.mw
+++ b/Megliadino_San_Vitale.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Megliadino San Vitale''' éte 'nu comune [[Italie|tagliáne]] de 1.934 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Megliadino San Vitale]]
+[[eo:Megliadino San Vitale]]
+[[fr:Megliadino San Vitale]]
+[[it:Megliadino San Vitale]]
+[[ja:メリアディーノ・サン・ヴィターレ]]
+[[nap:Megliadino San Vitale]]
+[[nl:Megliadino San Vitale]]
+[[pl:Megliadino San Vitale]]
+[[pt:Megliadino San Vitale]]
+[[ru:Мельядино-Сан-Витале]]
+[[uk:Мельядіно-Сан-Вітале]]
+[[vec:Megliadino San Vitale]]
+[[vi:Megliadino San Vitale]]
+[[vo:Megliadino San Vitale]]
