--- a/Megliadino_San_Fidenzio.mw
+++ b/Megliadino_San_Fidenzio.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Megliadino San Fidenzio''' éte 'nu comune [[Italie|tagliáne]] de 1.834 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Megliadino San Fidenzio]]
+[[eo:Megliadino San Fidenzio]]
+[[fr:Megliadino San Fidenzio]]
+[[it:Megliadino San Fidenzio]]
+[[ja:メリアディーノ・サン・フィデンツィオ]]
+[[nap:Megliadino San Fidenzio]]
+[[nl:Megliadino San Fidenzio]]
+[[pl:Megliadino San Fidenzio]]
+[[pt:Megliadino San Fidenzio]]
+[[ru:Мельядино-Сан-Фиденцио]]
+[[uk:Мельядіно-Сан-Фіденціо]]
+[[vec:Megliadino San Fidensio]]
+[[vi:Megliadino San Fidenzio]]
+[[vo:Megliadino San Fidenzio]]
