--- a/Melegnano.mw
+++ b/Melegnano.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Melegnano''' éte 'nu comune [[Italie|tagliáne]] de 16.436 crestiáne.
 [[Category:Gëografije]]
+
+[[br:Melegnano]]
+[[de:Melegnano]]
+[[en:Melegnano]]
+[[eo:Melegnano]]
+[[es:Melegnano]]
+[[fr:Melegnano]]
+[[it:Melegnano]]
+[[ja:メレニャーノ]]
+[[la:Marinianum]]
+[[nap:Melegnano]]
+[[nl:Melegnano]]
+[[pl:Melegnano]]
+[[pt:Melegnano]]
+[[ru:Меленьяно]]
+[[uk:Меленьяно]]
+[[vo:Melegnano]]
