--- a/Meleti.mw
+++ b/Meleti.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Meleti''' éte 'nu comune [[Italie|tagliáne]] de 450 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Meleti]]
+[[eo:Meleti]]
+[[fr:Meleti]]
+[[id:Meleti]]
+[[it:Meleti]]
+[[ja:メレーティ]]
+[[lmo:Melìd]]
+[[nap:Meleti]]
+[[nl:Meleti]]
+[[pl:Meleti]]
+[[pt:Meleti]]
+[[uk:Мелеті]]
+[[vi:Meleti]]
+[[vo:Meleti]]
