--- a/Melito_de_Napule.mw
+++ b/Melito_de_Napule.mw
@@ -4,3 +4,22 @@
 [[Category:Comune d'a Campania]]
 [[Category:Comune d'a provinge de Napule]]
 {{Provinge de Napule}}
+
+[[ar:ميليتو دي نابولي]]
+[[ca:Melito di Napoli]]
+[[de:Melito di Napoli]]
+[[en:Melito di Napoli]]
+[[eo:Melito di Napoli]]
+[[es:Melito di Napoli]]
+[[fr:Melito di Napoli]]
+[[hu:Melito di Napoli]]
+[[it:Melito di Napoli]]
+[[ja:メリート・ディ・ナーポリ]]
+[[nap:Melito 'e Napule]]
+[[nl:Melito di Napoli]]
+[[pl:Melito di Napoli]]
+[[pt:Melito di Napoli]]
+[[scn:Militu di Nàpuli]]
+[[uk:Меліто-ді-Наполі]]
+[[vi:Melito di Napoli]]
+[[vo:Melito di Napoli]]
