--- a/Roccasparvera.mw
+++ b/Roccasparvera.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Roccasparvera''' éte 'nu comune [[Italie|tagliáne]] de 733 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
