--- a/Roccavione.mw
+++ b/Roccavione.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Roccavione''' éte 'nu comune [[Italie|tagliáne]] de 2.791 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
