--- a/Rocchetta_Belbo.mw
+++ b/Rocchetta_Belbo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rocchetta Belbo''' éte 'nu comune [[Italie|tagliáne]] de 191 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
