--- a/Rodello.mw
+++ b/Rodello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rodello''' éte 'nu comune [[Italie|tagliáne]] de 908 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
