--- a/Rossana_(CN).mw
+++ b/Rossana_(CN).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Rossana (CN)''' éte 'nu comune [[Italie|tagliáne]] de 934 crestiáne.
-[[Category:Gëografije]]
+'''Rossana''' éte 'nu comune [[Italie|tagliáne]] de 934 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
