--- a/Ruffia.mw
+++ b/Ruffia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ruffia''' éte 'nu comune [[Italie|tagliáne]] de 311 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
