--- a/Saliceto.mw
+++ b/Saliceto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Saliceto''' éte 'nu comune [[Italie|tagliáne]] de 1.504 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
