--- a/Salmour.mw
+++ b/Salmour.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Salmour''' éte 'nu comune [[Italie|tagliáne]] de 704 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
