--- a/Sambuco.mw
+++ b/Sambuco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sambuco''' éte 'nu comune [[Italie|tagliáne]] de 127 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
