--- a/Sampeyre.mw
+++ b/Sampeyre.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sampeyre''' éte 'nu comune [[Italie|tagliáne]] de 1.146 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
