--- a/San_Benedetto_Belbo.mw
+++ b/San_Benedetto_Belbo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Benedetto Belbo''' éte 'nu comune [[Italie|tagliáne]] de 192 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
