--- a/San_Damiano_Macra.mw
+++ b/San_Damiano_Macra.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Damiano Macra''' éte 'nu comune [[Italie|tagliáne]] de 476 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
