--- a/San_Michele_Mondovì.mw
+++ b/San_Michele_Mondovì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Michele Mondovì''' éte 'nu comune [[Italie|tagliáne]] de 2.070 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
