--- a/Sanfrè.mw
+++ b/Sanfrè.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sanfrè''' éte 'nu comune [[Italie|tagliáne]] de 2.484 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
