--- a/Santa_Vittoria_d'Alba.mw
+++ b/Santa_Vittoria_d'Alba.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Santa Vittoria d'Alba''' éte 'nu comune [[Italie|tagliáne]] de 2.512 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
