--- a/Savigliano.mw
+++ b/Savigliano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Savigliano''' éte 'nu comune [[Italie|tagliáne]] de 20.456 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
