--- a/Scarnafigi.mw
+++ b/Scarnafigi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Scarnafigi''' éte 'nu comune [[Italie|tagliáne]] de 1.911 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
