--- a/Sinio.mw
+++ b/Sinio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sinio''' éte 'nu comune [[Italie|tagliáne]] de 461 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
