--- a/Somano.mw
+++ b/Somano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Somano''' éte 'nu comune [[Italie|tagliáne]] de 386 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
