--- a/Sommariva_del_Bosco.mw
+++ b/Sommariva_del_Bosco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sommariva del Bosco''' éte 'nu comune [[Italie|tagliáne]] de 5.923 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
