--- a/Tarantasca.mw
+++ b/Tarantasca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tarantasca''' éte 'nu comune [[Italie|tagliáne]] de 1.821 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
