--- a/Torre_Bormida.mw
+++ b/Torre_Bormida.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Torre Bormida''' éte 'nu comune [[Italie|tagliáne]] de 232 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
