--- a/Torre_Mondovì.mw
+++ b/Torre_Mondovì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Torre Mondovì''' éte 'nu comune [[Italie|tagliáne]] de 521 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Cuneo]]
+{{Provinge de Cuneo}}
