--- a/Vercelli.mw
+++ b/Vercelli.mw
@@ -1,10 +1,34 @@
 {{S}}
-{{GeoBox NomeCitta|Vercelli}}
-{{GeoBox Panorama|Vercelli_PiazzaCavour.jpg}}
-{{GeoBox Stemma|Vercelli-Stemma.png}}
-{{GeoBox NomeOriginale|Vercelli}} 
-{{GeoBox Mappa|PMN-Mappa.png}}
-{{GeoBox Fine}}
+{{Comune 
+|nomeComune = Vercelli
+|panorama = Vercelli_PiazzaCavour.jpg
+|linkStemma = Vercelli-Stemma.png
+|siglaRegione = PMN
+|siglaProvincia = VC
+|latitudineGradi = 45
+|latitudineMinuti = 19
+|latitudineSecondi = 0
+|longitudineGradi = 8
+|longitudineMinuti = 25
+|longitudineSecondi = 0
+|mappaX = 48
+|mappaY = 62
+|altitudine = 130
+|superficie = 79,85
+|abitanti = 47.080
+|anno = 31-12-2008 (fonte ISTAT)
+|densita = 590
+|frazioni = 
+|comuniLimitrofi = [[Asigliano Vercellese]], [[Borgo Vercelli]], [[Caresanablot]], [[Desana]], [[Lignana]], [[Olcenengo]], [[Palestro]] (PV), [[Prarolo]], [[Salasco]], [[Sali Vercellese]], [[San Germano Vercellese]], [[Villata]], [[Vinzaglio]] (NO), [[Quinto Vercellese]], [[Olcenengo]]
+|cap = 13100
+|prefisso = [[0161]]
+|istat = 002158
+|fiscale = L750
+|nomeAbitanti = vercellesi
+|patrono = [[Sant'Eusebio di Vercelli|Sant'Eusebio]]
+|festivo = [[1 agosto|1° agosto]]
+|sito = http://www.comune.vercelli.it/
+}}
 
 '''Vercelli''' ète nu comune de 44.500 crisitane.
 
