--- a/Alice_Castello.mw
+++ b/Alice_Castello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Alice Castello''' éte 'nu comune [[Italie|tagliáne]] de 2.603 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
