--- a/Balmuccia.mw
+++ b/Balmuccia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Balmuccia''' éte 'nu comune [[Italie|tagliáne]] de 100 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
