--- a/Bianzè.mw
+++ b/Bianzè.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bianzè''' éte 'nu comune [[Italie|tagliáne]] de 2.038 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
