--- a/Boccioleto.mw
+++ b/Boccioleto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Boccioleto''' éte 'nu comune [[Italie|tagliáne]] de 277 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
