--- a/Borgo_Vercelli.mw
+++ b/Borgo_Vercelli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgo Vercelli''' éte 'nu comune [[Italie|tagliáne]] de 2.158 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
