--- a/Borgo_d'Ale.mw
+++ b/Borgo_d'Ale.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgo d'Ale''' éte 'nu comune [[Italie|tagliáne]] de 2.565 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
