--- a/Borgosesia.mw
+++ b/Borgosesia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgosesia''' éte 'nu comune [[Italie|tagliáne]] de 13.674 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
