--- a/Buronzo.mw
+++ b/Buronzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Buronzo''' éte 'nu comune [[Italie|tagliáne]] de 950 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
