--- a/Campertogno.mw
+++ b/Campertogno.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Campertogno''' éte 'nu comune [[Italie|tagliáne]] de 228 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
