--- a/Carcoforo.mw
+++ b/Carcoforo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carcoforo''' éte 'nu comune [[Italie|tagliáne]] de 73 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
