--- a/Caresanablot.mw
+++ b/Caresanablot.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Caresanablot''' éte 'nu comune [[Italie|tagliáne]] de 1073 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
