--- a/Cervatto.mw
+++ b/Cervatto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cervatto''' éte 'nu comune [[Italie|tagliáne]] de 49 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
