--- a/Civiasco.mw
+++ b/Civiasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Civiasco''' éte 'nu comune [[Italie|tagliáne]] de 257 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
