--- a/Costanzana.mw
+++ b/Costanzana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Costanzana''' éte 'nu comune [[Italie|tagliáne]] de 896 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
