--- a/Crescentino.mw
+++ b/Crescentino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Crescentino''' éte 'nu comune [[Italie|tagliáne]] de 8.016 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
