--- a/Fobello.mw
+++ b/Fobello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fobello''' éte 'nu comune [[Italie|tagliáne]] de 249 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
