--- a/Formigliana.mw
+++ b/Formigliana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Formigliana''' éte 'nu comune [[Italie|tagliáne]] de 560 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
