--- a/Gattinara.mw
+++ b/Gattinara.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gattinara''' éte 'nu comune [[Italie|tagliáne]] de 8.506 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
