--- a/Ghislarengo.mw
+++ b/Ghislarengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ghislarengo''' éte 'nu comune [[Italie|tagliáne]] de 833 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
