--- a/Guardabosone.mw
+++ b/Guardabosone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Guardabosone''' éte 'nu comune [[Italie|tagliáne]] de 339 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
