--- a/Lignana.mw
+++ b/Lignana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lignana''' éte 'nu comune [[Italie|tagliáne]] de 543 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
