--- a/Livorno_Ferraris.mw
+++ b/Livorno_Ferraris.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Livorno Ferraris''' éte 'nu comune [[Italie|tagliáne]] de 4.488 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
