--- a/Mollia.mw
+++ b/Mollia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mollia''' éte 'nu comune [[Italie|tagliáne]] de 100 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
