--- a/Motta_de'_Conti.mw
+++ b/Motta_de'_Conti.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Motta de' Conti''' éte 'nu comune [[Italie|tagliáne]] de 851 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
