--- a/Olcenengo.mw
+++ b/Olcenengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Olcenengo''' éte 'nu comune [[Italie|tagliáne]] de 607 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
