--- a/Palazzolo_Vercellese.mw
+++ b/Palazzolo_Vercellese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Palazzolo Vercellese''' éte 'nu comune [[Italie|tagliáne]] de 1.328 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
