--- a/Pertengo.mw
+++ b/Pertengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pertengo''' éte 'nu comune [[Italie|tagliáne]] de 338 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
