--- a/Piode.mw
+++ b/Piode.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Piode''' éte 'nu comune [[Italie|tagliáne]] de 195 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
