--- a/Postua.mw
+++ b/Postua.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Postua''' éte 'nu comune [[Italie|tagliáne]] de 594 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
