--- a/Prarolo.mw
+++ b/Prarolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Prarolo''' éte 'nu comune [[Italie|tagliáne]] de 589 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
