--- a/Quarona.mw
+++ b/Quarona.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Quarona''' éte 'nu comune [[Italie|tagliáne]] de 4.252 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
