--- a/Rassa.mw
+++ b/Rassa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rassa''' éte 'nu comune [[Italie|tagliáne]] de 71 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
