--- a/Rima_San_Giuseppe.mw
+++ b/Rima_San_Giuseppe.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rima San Giuseppe''' éte 'nu comune [[Italie|tagliáne]] de 76 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
