--- a/Rimella.mw
+++ b/Rimella.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rimella''' éte 'nu comune [[Italie|tagliáne]] de 142 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
