--- a/Riva_Valdobbia.mw
+++ b/Riva_Valdobbia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Riva Valdobbia''' éte 'nu comune [[Italie|tagliáne]] de 238 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
