--- a/Ronsecco.mw
+++ b/Ronsecco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ronsecco''' éte 'nu comune [[Italie|tagliáne]] de 616 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
