--- a/Salasco.mw
+++ b/Salasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Salasco''' éte 'nu comune [[Italie|tagliáne]] de 251 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
