--- a/Saluggia.mw
+++ b/Saluggia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Saluggia''' éte 'nu comune [[Italie|tagliáne]] de 4.074 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
