--- a/San_Germano_Vercellese.mw
+++ b/San_Germano_Vercellese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Germano Vercellese''' éte 'nu comune [[Italie|tagliáne]] de 1.812 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
