--- a/Santhià.mw
+++ b/Santhià.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Santhià''' éte 'nu comune [[Italie|tagliáne]] de 9.308 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
