--- a/Stroppiana.mw
+++ b/Stroppiana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Stroppiana''' éte 'nu comune [[Italie|tagliáne]] de 1.240 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
