--- a/Tronzano_Vercellese.mw
+++ b/Tronzano_Vercellese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tronzano Vercellese''' éte 'nu comune [[Italie|tagliáne]] de 3.533 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Vercelli]]
+{{Provinge de Vercelli}}
