--- a/Ala_di_Stura.mw
+++ b/Ala_di_Stura.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ala di Stura''' éte 'nu comune [[Italie|tagliáne]] de 477 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
