--- a/Alice_Superiore.mw
+++ b/Alice_Superiore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Alice Superiore''' éte 'nu comune [[Italie|tagliáne]] de 614 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
