--- a/Andrate.mw
+++ b/Andrate.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Andrate''' éte 'nu comune [[Italie|tagliáne]] de 476 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
