--- a/Baldissero_Canavese.mw
+++ b/Baldissero_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Baldissero Canavese''' éte 'nu comune [[Italie|tagliáne]] de 510 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
