--- a/Baldissero_Torinese.mw
+++ b/Baldissero_Torinese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Baldissero Torinese''' éte 'nu comune [[Italie|tagliáne]] de 3.240 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
