--- a/Banchette.mw
+++ b/Banchette.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Banchette''' éte 'nu comune [[Italie|tagliáne]] de 3.427 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
