--- a/Borgaro_Torinese.mw
+++ b/Borgaro_Torinese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgaro Torinese''' éte 'nu comune [[Italie|tagliáne]] de 13.317 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
