--- a/Borgiallo.mw
+++ b/Borgiallo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgiallo''' éte 'nu comune [[Italie|tagliáne]] de 496 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
