--- a/Borgofranco_d'Ivrea.mw
+++ b/Borgofranco_d'Ivrea.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgofranco d'Ivrea''' éte 'nu comune [[Italie|tagliáne]] de 3.634 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
