--- a/Brandizzo.mw
+++ b/Brandizzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Brandizzo''' éte 'nu comune [[Italie|tagliáne]] de 8.000 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
