--- a/Bricherasio.mw
+++ b/Bricherasio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bricherasio''' éte 'nu comune [[Italie|tagliáne]] de 4.016 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
