--- a/Brozolo.mw
+++ b/Brozolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Brozolo''' éte 'nu comune [[Italie|tagliáne]] de 434 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
