--- a/Bruino.mw
+++ b/Bruino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bruino''' éte 'nu comune [[Italie|tagliáne]] de 7.928 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
