--- a/Bruzolo.mw
+++ b/Bruzolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bruzolo''' éte 'nu comune [[Italie|tagliáne]] de 1.336 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
