--- a/Busano.mw
+++ b/Busano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Busano''' éte 'nu comune [[Italie|tagliáne]] de 1.365 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
