--- a/Bussoleno.mw
+++ b/Bussoleno.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bussoleno''' éte 'nu comune [[Italie|tagliáne]] de 6.560 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
