--- a/Cafasse.mw
+++ b/Cafasse.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cafasse''' éte 'nu comune [[Italie|tagliáne]] de 3.516 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
