--- a/Caluso.mw
+++ b/Caluso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Caluso''' éte 'nu comune [[Italie|tagliáne]] de 7.387 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
