--- a/Cambiano.mw
+++ b/Cambiano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cambiano''' éte 'nu comune [[Italie|tagliáne]] de 6.008 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
