--- a/Campiglione-Fenile.mw
+++ b/Campiglione-Fenile.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Campiglione-Fenile''' éte 'nu comune [[Italie|tagliáne]] de 1.284 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
