--- a/Candia_Canavese.mw
+++ b/Candia_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Candia Canavese''' éte 'nu comune [[Italie|tagliáne]] de 1.304 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
