--- a/Candiolo.mw
+++ b/Candiolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Candiolo''' éte 'nu comune [[Italie|tagliáne]] de 5.385 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
