--- a/Cantalupa.mw
+++ b/Cantalupa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cantalupa''' éte 'nu comune [[Italie|tagliáne]] de 2.073 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
