--- a/Cantoira.mw
+++ b/Cantoira.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cantoira''' éte 'nu comune [[Italie|tagliáne]] de 541 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
