--- a/Caravino.mw
+++ b/Caravino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Caravino''' éte 'nu comune [[Italie|tagliáne]] de 1.009 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
