--- a/Carema.mw
+++ b/Carema.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carema''' éte 'nu comune [[Italie|tagliáne]] de 769 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
