--- a/Carignano.mw
+++ b/Carignano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carignano''' éte 'nu comune [[Italie|tagliáne]] de 8.777 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
