--- a/Caselle_Torinese.mw
+++ b/Caselle_Torinese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Caselle Torinese''' éte 'nu comune [[Italie|tagliáne]] de 16.783 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
