--- a/Castiglione_Torinese.mw
+++ b/Castiglione_Torinese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castiglione Torinese''' éte 'nu comune [[Italie|tagliáne]] de 5.935 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
