--- a/Cavagnolo.mw
+++ b/Cavagnolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavagnolo''' éte 'nu comune [[Italie|tagliáne]] de 2.274 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
